2008-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm:  Clean up terminal code.
	Use shared routines gp_alloc(), int_expression().
	Switch to using same set of colors as other terminals (web_color_rgbs).
	Handle RGB color request by returning closest match to a known color.
	Don't over-write user colors with each new palette.
	Decouple dash pattern from line color.

2008-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm: Remove specific references to Windows 3.1

2008-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normally.
	This allows one to leave holes in a matrix data file.

	* src/graphics.c (boundary): The windows and postscript terminals place
	the xlabel text with the character baseline on the bottom edge of the
	canvas.  This causes any descenders to be clipped.  This patch leaves an
	extra 1/5 line height of empty space at the bottom.  This fixes windows
	and postscript, but introduces a small waste of space on most other
	terminal types.
	Bug #1918293

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_encode_image PS_image):  If the palette size is
	limited by "set palette maxcolors" then we need to rescale [0:maxcolors]
	to [0:bitwidth] for the packed representation of the image in PostScript
	Bug #1869824

2008-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (int_error):  Revert patch of 2008-04-19; it is not needed
	for 4.2

2008-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/sun.trm:  Rename local static variable "canvas" to "SUN_canvas"
	to avoid conflict with global of the same name.

	* src/util.c (int_error):  We really want to use snprintf(), but if the
	platform doesn't provide it (SunOS 4.1) what can you do?
