@@ -3,10 +3,11 @@ New features, changes and fixes since previous release
 * NEW set absolute plot margins in screen coordinates
 * NEW "nocontours" keyword for splot
 * NEW "undefine foo" clears previously defined user variable foo
-* CHANGE gd.trm: use dynamically-allocated TTF font names
 * CHANGE try harder to autotitle columns in using specs with expressions
+* CHANGE gd.trm: use dynamically-allocated TTF font names
 * CHANGE x11: more finely sampled color palette for PM3D
 * CHANGE cgm: switch to using web_color_rgbs; approximate RGB colors
+* CHANGE fig: more point types, 4.2-style font and size syntax for "set term"
 * FIX (gd post) don't segfault on very long font names
 * FIX allow variable color from input file for "with boxes"
 * FIX don't run off the end of "set format" commands
